Fix demo docker env

--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,10 @@ uuid.txt
 share
 config/core.properties
 local
-docker/data/blobstorage/*
-docker/data/filestorage/*
+data/blobstorage/*
+data/filestorage/*
+data/log
+data/async-uuid.txt
 .plone.versioncheck.cache/
 .plone.versioncheck.tracked.json
 checkversion.html
