--- a/docker/Dockerfile-ubuntu-20.04
+++ b/docker/Dockerfile-ubuntu-20.04
@@ -94,8 +94,7 @@ ENV ZEO_ADDRESS=zeo:8100 \
  OO_PORT=2002 \
  USE_STREAM=False \
  CUSTOM_TMP=/var/tmp \
- ACTIVE_BIGBANG=False \
- SITE_ID=standard
+ ACTIVE_BIGBANG=False
 
 EXPOSE 8081
 ENTRYPOINT ["/plone/docker-entrypoint.sh"]
