use customizable default site id

--- a/base.cfg
+++ b/base.cfg
@@ -115,7 +115,7 @@ environment-vars =
   PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
   DEFAULT_LANGUAGE fr
   ACTIVE_BIGBANG True
-  SITE_ID delib
+  SITE_ID ${port:plone-path}
   ADMIN_PASSWORD ${port:admin-password}
 #  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
