--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -4,6 +4,7 @@ ARG PROFILE="communes-dev.cfg"
 
 WORKDIR /
 USER root
+COPY --chown=imio *.cfg *.conf requirements.txt Makefile docker/docker-initialize.py docker/*.sh /plone/
 RUN apt-get update \
   && apt-get install -qqy --no-install-recommends \
   && buildDeps="build-essential \
@@ -48,10 +49,13 @@ RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    logging.cfg" >> buildout.cfg \
   && echo "    docker-dev.cfg" >> buildout.cfg \
+  && sed -ie "s#Products.MeetingCommunes:zcity#Products.MeetingCommunes:demo#" base.cfg \
   && su -c "virtualenv -p python2 ." -s /bin/sh imio \
   && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/sh imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
-  && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/
+  && rm -rf develop-eggs/ var/blobstorage/ var/filestorage/
 
 USER imio
-ENTRYPOINT ["bash"]
+EXPOSE 8081
+ENTRYPOINT ["/plone/docker-entrypoint.sh"]
+CMD ["instance"]
