--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -18,7 +18,7 @@ services:
     mem_reservation: 150M
     mem_swappiness: 0
   zeo:
-    image: imiobe/iadelib:demo-latest
+    image: imiobe/iadelib:dev
     command: zeoserver
     environment:
       - HOSTNAME=zeo
@@ -33,7 +33,7 @@ services:
     healthcheck:
       test: "/plone/zeo_healthcheck.sh"
   instance:
-    image: imiobe/iadelib:demo-latest
+    image: imiobe/iadelib:dev
     command: instance
     ports:
       - "20081:8081"
@@ -59,7 +59,7 @@ services:
     labels:
       SERVICE_NAME: "instance1"
   worker-cron:
-    image: imiobe/iadelib:demo-latest
+    image: imiobe/iadelib:dev
     command: instance-cron
     ports:
       - "8087:8087"
@@ -85,13 +85,14 @@ services:
     labels:
       SERVICE_NAME: "worker-cron"
   worker-async:
-    image: imiobe/iadelib:demo-latest
+    image: imiobe/iadelib:dev
     command: instance-async
     networks:
       - delib_internal
     depends_on:
       - zeo
       - libreoffice
+      - worker-cron
     environment:
       - ZEO_CLIENT_CACHE_SIZE=1000MB
       - ZODB_CACHE_SIZE=100000
@@ -106,41 +107,41 @@ services:
       - vartmp:/var/tmp
     labels:
       SERVICE_NAME: "worker-async"
-  worker-amqp:
-    image: imiobe/iadelib:demo-latest
-    command: instance-amqp
-    ports:
-      - "20085:8286"
-    networks:
-      - delib_internal
-      - delib_external
-    depends_on:
-      - zeo
-      - worker-cron
-    environment:
-      - ZEO_CLIENT_CACHE_SIZE=1000MB
-      - ZODB_CACHE_SIZE=100000
-      - CLUSTER=iadelib_pm42
-      - PLONE_PATH=demo
-      - MQ_CLIENT_ID
-      - MQ_WS_URL
-      - MQ_WS_LOGIN
-      - MQ_WS_PASSWORD
-      - MQ_HOST
-      - MQ_PORT
-      - MQ_LOGIN
-      - MQ_PASSWORD
-      - HOSTNAME=worker-amqp
-    healthcheck:
-      test: "curl -f localhost:8286/$$PLONE_PATH/@@ok"
-    volumes:
-      - ./data/:/data
-      - tmp:/tmp
-      - vartmp:/var/tmp
-    labels:
-      SERVICE_NAME: "worker-cron"
+#  worker-amqp:
+#    image: imiobe/iadelib:dev
+#    command: instance-amqp
+#    ports:
+#      - "20085:8286"
+#    networks:
+#      - delib_internal
+#      - delib_external
+#    depends_on:
+#      - zeo
+#      - worker-cron
+#    environment:
+#      - ZEO_CLIENT_CACHE_SIZE=1000MB
+#      - ZODB_CACHE_SIZE=100000
+#      - CLUSTER=iadelib_pm42
+#      - PLONE_PATH=demo
+#      - MQ_CLIENT_ID
+#      - MQ_WS_URL
+#      - MQ_WS_LOGIN
+#      - MQ_WS_PASSWORD
+#      - MQ_HOST
+#      - MQ_PORT
+#      - MQ_LOGIN
+#      - MQ_PASSWORD
+#      - HOSTNAME=worker-amqp
+#    healthcheck:
+#      test: "curl -f localhost:8286/$$PLONE_PATH/@@ok"
+#    volumes:
+#      - ./data/:/data
+#      - tmp:/tmp
+#      - vartmp:/var/tmp
+#    labels:
+#      SERVICE_NAME: "worker-cron"
   maintenance:
-    image: imiobe/iadelib:demo-latest
+    image: imiobe/iadelib:dev
     command: maintenance
     ports:
       - "20089:8080"
@@ -150,7 +151,6 @@ services:
     depends_on:
       - zeo
       - libreoffice
-      - worker-cron
     environment:
       - ZEO_CLIENT_CACHE_SIZE=1000MB
       - ZODB_CACHE_SIZE=100000
