--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -22,3 +22,4 @@ jobs:
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
           tags: imiobe/iadelib:dev
           dockerfile: ./docker/Dockerfile-dev
+          profile: communes-dev
