Set RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT to False by default (prod/dev) but set it to True in tests to not break it

--- a/base.cfg
+++ b/base.cfg
@@ -119,6 +119,7 @@ environment-vars =
   ADMIN_PASSWORD ${port:admin-password}
 #  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
+  RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT False
 
 eggs =
     ${buildout:eggs}
