--- a/dev.cfg
+++ b/dev.cfg
@@ -75,7 +75,6 @@ environment-vars +=
     ENV dev
     CUSTOM_TMP /tmp/appy
 #    PROFILE_PUBLISHER 1
-#    RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT False
 
 zope-conf-additional +=
 #    publisher-profile-file ${buildout:directory}/profile.dat
@@ -96,6 +95,7 @@ zope_i18n_compile_mo_files = true
 ENV = dev
 OO_PORT = ${port:oo-port}
 PYTHON_UNO = ${port:python-uno}
+RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT True
 
 [test]
 recipe = zc.recipe.testrunner
