Fixed var env format in testenv section

--- a/dev.cfg
+++ b/dev.cfg
@@ -95,7 +95,7 @@ zope_i18n_compile_mo_files = true
 ENV = dev
 OO_PORT = ${port:oo-port}
 PYTHON_UNO = ${port:python-uno}
-RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT True
+RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT = true
 
 [test]
 recipe = zc.recipe.testrunner
