Use json monitoring log instead of usual Z2 by default

--- a/base.cfg
+++ b/base.cfg
@@ -134,6 +134,7 @@ eggs =
     zc.z3monitor
     imio.prometheus
     collective.big.bang
+    ftw.structlog
 
 zcml =
     Products.PloneMeeting-overrides
@@ -143,6 +144,9 @@ zcml =
     collective.monitor
     imio.prometheus
     collective.big.bang
+    ftw.structlog
+
+z2-log = disable
 
 [instance-async]
 <= instance1
