Disable bigbang in dev

--- a/dev.cfg
+++ b/dev.cfg
@@ -70,11 +70,15 @@ always-accept-server-certificate = true
 recipe = plone.recipe.zope2instance
 debug-mode = on
 verbose-security = on
+environment-vars -=
+    ACTIVE_BIGBANG True
+
 environment-vars +=
     ENABLE_PRINTING_MAILHOST True
     ENV dev
     CUSTOM_TMP /tmp/appy
 #    PROFILE_PUBLISHER 1
+    ACTIVE_BIGBANG False
 
 zope-conf-additional +=
 #    publisher-profile-file ${buildout:directory}/profile.dat
