force bigbang for cron instance

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -51,5 +51,8 @@ zope-conf-additional =
   </clock-server>
   ${zope-conf:zamqp}
 
+environment-vars +=
+    ACTIVE_BIGBANG True
+
 [instance-debug]
 blob-storage = /data/blobstorage
