remove any value of ACTIVE_BIGBANG in docker instances

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -26,6 +26,7 @@ zope-conf-additional =
     ${zope-conf:zamqp}
 environment-vars -=
     ACTIVE_BIGBANG True
+    ACTIVE_BIGBANG False
     ADMIN_PASSWORD ${port:admin-password}
     PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
 
