Use Products.DCWorkflowGraph = 0.4.1

--- a/dev.cfg
+++ b/dev.cfg
@@ -88,6 +88,7 @@ eggs +=
 #    archetypes.schematuning
     plone.reload
     collective.profiler
+    Products.DCWorkflowGraph
     robotframework-selenium2screenshots
     ${debug:eggs}
 
