--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -35,6 +35,7 @@ robotframework-selenium2screenshots = 0.7.2
 robotsuite = 2.0.0
 selenium = 3.3.0
 
+Products.DCWorkflowGraph = 0.4.1
 collective.profiler = 0.3
 ecreall.helpers.testing = 1.7
 
