--- a/restapi.cfg
+++ b/restapi.cfg
@@ -9,10 +9,10 @@ eggs +=
     plonemeeting.restapi[test]
 
 [versions]
-imio.restapi = 1.0a14
-plonemeeting.restapi = 1.0rc2
+imio.restapi = 1.0b1
+plonemeeting.restapi = 1.0rc11
 
-plone.restapi = 7.3.8
+plone.restapi = 7.7.0
 PyJWT = 1.7.1
 plone.schema = 1.2.1
 plone.rest = 1.6.1
@@ -20,7 +20,7 @@ jsonschema = 3.2.0
 pyrsistent = 0.16.0
 importlib-metadata = 1.6.1
 attrs = 19.3.0
-zipp = 0.6.0
+zipp = 1.0.0
 pathlib2 = 2.3.5
 contextlib2 = 0.6.0.post1
 more-itertools = 5.0.0
