--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -14,8 +14,9 @@ source-directory = ${buildout:directory}/src
 recipe = collective.recipe.template
 input = inline:
     #!/bin/bash
-    coverage run --source=${buildout:directory}/src/Products.PloneMeeting bin/test --layer=!ROBOT
-    coverage report
+    # important to use python 3 coveralls and python 2 coverage
+    bin/coverage run --source=${buildout:directory}/src/Products.PloneMeeting bin/test --layer=!ROBOT
+    bin/coverage report
     cd ${buildout:directory}/src/Products.PloneMeeting
     cp ${buildout:directory}/.coverage* .
     coveralls
