exit bash immediatly on error

--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -14,6 +14,7 @@ source-directory = ${buildout:directory}/src
 recipe = collective.recipe.template
 input = inline:
     #!/bin/bash
+    set -e
     # important to use python 3 coveralls and python 2 coverage
     bin/coverage run --source=${buildout:directory}/src/Products.PloneMeeting bin/test --layer=!ROBOT
     bin/coverage report
