--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -25,6 +25,8 @@ zope-conf-additional =
     ${zope-conf:additional}
     ${zope-conf:zamqp}
 environment-vars -=
+    OO_PORT ${port:oo-port}
+    PYTHON_UNO ${port:python-uno}
     ACTIVE_BIGBANG True
     ACTIVE_BIGBANG False
     ADMIN_PASSWORD ${port:admin-password}
