removed robot part

--- a/dev.cfg
+++ b/dev.cfg
@@ -12,7 +12,6 @@ parts +=
     testrestapi
     coverage
     report
-    robot
     code-analysis
     ploneversioncheck
     searchandreplace
@@ -71,7 +70,9 @@ recipe = plone.recipe.zope2instance
 debug-mode = on
 verbose-security = on
 environment-vars -=
-    ACTIVE_BIGBANG True
+      PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
+
+;    ACTIVE_BIGBANG True
 
 environment-vars +=
     ENABLE_PRINTING_MAILHOST True
@@ -89,7 +90,6 @@ eggs +=
     plone.reload
     collective.profiler
     Products.DCWorkflowGraph
-    robotframework-selenium2screenshots
     ${debug:eggs}
 
 zcml +=
@@ -129,15 +129,15 @@ scripts = coverage=report
 initialization =
     sys.argv = sys.argv[:] + ['html', '-i']
 
-[robot]
-recipe = zc.recipe.egg
-eggs =
-    ${test:eggs}
-    plone.app.robotframework[debug]
-    robotframework-selenium2screenshots
-initialization =
-   import os
-   os.environ['ENV'] = 'DEV'
+;[robot]
+;recipe = zc.recipe.egg
+;eggs =
+;    ${test:eggs}
+;    plone.app.robotframework[debug]
+;    robotframework-selenium2screenshots
+;initialization =
+;   import os
+;   os.environ['ENV'] = 'DEV'
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
