--- a/versions.cfg
+++ b/versions.cfg
@@ -22,7 +22,7 @@ collective.contact.core = 1.38
 collective.contact.plonegroup = 1.39
 collective.contact.widget = 1.12
 collective.dexteritytextindexer = 2.2.1
-collective.documentgenerator = 3.28
+collective.documentgenerator = 3.29
 collective.eeafaceted.batchactions = 1.9
 collective.eeafaceted.collectionwidget = 1.14
 collective.eeafaceted.dashboard = 0.18
@@ -125,7 +125,7 @@ collective.datagridcolumns = 0.7.0
 # collective.documentviewer 3.0.3
 repoze.catalog = 0.8.3
 
-collective.big.bang = 1.0b2
+collective.big.bang = 1.0.1
 five.z2monitor = 0.2
 ftw.structlog = 1.3.1
 imio.prometheus = 1.0.1
