--- a/dev.cfg
+++ b/dev.cfg
@@ -70,9 +70,8 @@ recipe = plone.recipe.zope2instance
 debug-mode = on
 verbose-security = on
 environment-vars -=
-      PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
-
-;    ACTIVE_BIGBANG True
+    PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
+    ACTIVE_BIGBANG True
 
 environment-vars +=
     ENABLE_PRINTING_MAILHOST True
