Enable collective.big.bang only in prod, removed it from dev

--- a/prod.cfg
+++ b/prod.cfg
@@ -11,8 +11,13 @@ parts +=
     instance-debug
     repozo
 
+[instance1]
+environment-vars += ${bigbang:environment-vars}
+
 [instance2]
 <= instance1
+# collective.bib.bang is only enabled in instance1
+environment-vars -= ${bigbang:environment-vars}
 http-address = ${port:instance2-http}
 zope-conf-additional =
   <product-config five.z2monitor>
@@ -20,10 +25,6 @@ zope-conf-additional =
   </product-config>
   ${zope-conf:additional}
   ${zope-conf:zamqp}
-environment-vars -=
-    ACTIVE_BIGBANG True
-    ADMIN_PASSWORD ${port:admin-password}
-    PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
 
 [instance3]
 <= instance2
