--- a/base.cfg
+++ b/base.cfg
@@ -62,6 +62,15 @@ amqp =
 zamqp =
 solr-eggs =
 
+[bigbang]
+environment-vars =
+    # collective.big.bang related vars
+    ACTIVE_BIGBANG True
+    PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
+    DEFAULT_LANGUAGE fr
+    SITE_ID ${port:plone-path}
+    ADMIN_PASSWORD ${port:admin-password}
+
 [instance1]
 #effective-user =
 user = admin:${port:admin-password}
@@ -111,11 +120,6 @@ environment-vars =
   OO_PORT ${port:oo-port}
   PYTHON_UNO ${port:python-uno}
   PUBLIC_URL ${port:public-url}
-  PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
-  DEFAULT_LANGUAGE fr
-  ACTIVE_BIGBANG True
-  SITE_ID ${port:plone-path}
-  ADMIN_PASSWORD ${port:admin-password}
 #  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
   RETURN_FULLOBJECT_AFTER_CREATION_DEFAULT False
@@ -166,6 +170,7 @@ zope-conf-additional =
 
 [instance-amqp]
 <= instance1
+environment-vars -= ${bigbang:environment-vars}
 zserver-threads = 1
 
 http-address = ${port:instance-amqp-http}
@@ -176,10 +181,6 @@ zope-conf-additional =
   ${zope-conf:additional}
   ${zope-conf:amqp}
   ${zope-conf:zamqp}
-environment-vars -=
-    ACTIVE_BIGBANG True
-    ADMIN_PASSWORD ${port:admin-password}
-    PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
 
 [omelette]
 recipe = collective.recipe.omelette
@@ -196,4 +197,3 @@ zcml =
 recipe = zc.recipe.egg
 eggs = ZODB3
 scripts = repozo
-
