--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -27,6 +27,7 @@ zope-conf-additional =
 environment-vars -=
     OO_PORT ${port:oo-port}
     PYTHON_UNO ${port:python-uno}
+    ${bigbang:environment-vars}
 
 [instance-amqp]
 blob-storage = /data/blobstorage
@@ -52,6 +53,8 @@ zope-conf-additional =
 
 environment-vars +=
     ACTIVE_BIGBANG True
+    PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
+    DEFAULT_LANGUAGE fr
 
 [instance-debug]
 blob-storage = /data/blobstorage
