--- a/docker/Dockerfile-demo
+++ b/docker/Dockerfile-demo
@@ -68,7 +68,7 @@ RUN apt-get update \
   && echo "    amqp.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
-  && sed -ie "s#Products.MeetingCommunes:zcity#Products.MeetingCommunes:demo#" base.cfg \
+  && sed -ie "s#Products.MeetingCommunes:zcity#Products.MeetingCommunes:demo#" *.cfg \
   && su -c "virtualenv -p python2 ." -s /bin/sh imio \
   && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/sh imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
