Disable collective.big.bang for release of buildout.pm 4.2.12

--- a/base.cfg
+++ b/base.cfg
@@ -65,7 +65,7 @@ solr-eggs =
 [bigbang]
 environment-vars =
     # collective.big.bang related vars
-    ACTIVE_BIGBANG True
+    ACTIVE_BIGBANG False
     PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
     DEFAULT_LANGUAGE fr
     SITE_ID ${port:plone-path}
