--- a/liege-dev.cfg
+++ b/liege-dev.cfg
@@ -18,6 +18,7 @@ zcml +=
 
 [sources]
 Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${remotes:imio_push}/Products.MeetingLiege.git branch=master
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=PM-3880_custom_reviewersFor
 
 [testliege]
 recipe = zc.recipe.testrunner
