Update docker cron config

--- a/docker-dev.cfg
+++ b/docker-dev.cfg
@@ -51,10 +51,7 @@ zope-conf-additional =
   </clock-server>
   ${zope-conf:zamqp}
 
-environment-vars +=
-    ACTIVE_BIGBANG True
-    PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
-    DEFAULT_LANGUAGE fr
+environment-vars += ${bigbang:environment-vars}
 
 [instance-debug]
 blob-storage = /data/blobstorage
