--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -1,7 +1,7 @@
 version: '2.4'
 services:
   libreoffice:
-    image: imiobe/libreoffice:still
+    image: imiobe/libreoffice:7.3
     command: soffice --headless --norestore --accept="socket,host=libreoffice,port=2002,tcpNoDelay=1;urp;StarOffice.ServiceManager"
     expose:
       - "2002"
