--- a/bep-dev.cfg
+++ b/bep-dev.cfg
@@ -20,7 +20,7 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingBEP = git ${remotes:imio}/Products.MeetingBEP.git pushurl=${remotes:imio_push}/Products.MeetingBEP.git branch=master
+Products.MeetingBEP = git ${remotes:imio}/Products.MeetingBEP.git pushurl=${remotes:imio_push}/Products.MeetingBEP.git branch=PM-3681_migrate_to_42
 
 [testbep]
 recipe = zc.recipe.testrunner
