--- a/actions/dockerhub/action.yml
+++ b/actions/dockerhub/action.yml
@@ -17,7 +17,7 @@ inputs:
   dockerfile:
     description: 'Path to Dockerfile'
     required: true
-    default: ./docker/Dockerfile-ubuntu-20.04
+    default: ./docker/Dockerfile-latest
 runs:
   using: "composite"
   steps:
