Use sources for collective.contact.widget

--- a/dev.cfg
+++ b/dev.cfg
@@ -30,6 +30,7 @@ auto-checkout =
     collective.compoundcriterion
     collective.contact.core
     collective.contact.plonegroup
+    collective.contact.widget
     collective.documentgenerator
     collective.dms.scanbehavior
     collective.eeafaceted.batchactions
