--- a/sources.cfg
+++ b/sources.cfg
@@ -18,6 +18,7 @@ collective.ckeditor = git ${remotes:collective}/collective.ckeditor.git pushurl=
 collective.compoundcriterion = git ${remotes:collective}/collective.compoundcriterion.git pushurl=${remotes:collective_push}/collective.compoundcriterion.git
 collective.contact.core = git ${remotes:collective}/collective.contact.core.git pushurl=${remotes:collective_push}/collective.contact.core.git
 collective.contact.plonegroup = git ${remotes:collective}/collective.contact.plonegroup.git pushurl=${remotes:collective_push}/collective.contact.plonegroup.git
+collective.contact.widget = git ${remotes:collective}/collective.contact.widget.git pushurl=${remotes:collective_push}/collective.contact.widget.git
 collective.dms.scanbehavior = git ${remotes:collective}/collective.dms.scanbehavior.git pushurl=${remotes:collective_push}/collective.dms.scanbehavior.git
 collective.documentgenerator = git ${remotes:collective}/collective.documentgenerator.git pushurl=${remotes:collective_push}/collective.documentgenerator.git
 collective.eeafaceted.batchactions = git ${remotes:imio}/collective.eeafaceted.batchactions.git pushurl=${remotes:imio_push}/collective.eeafaceted.batchactions.git
