Ignore W504 (Line break occurred after a binary operator) in flake8

--- a/dev.cfg
+++ b/dev.cfg
@@ -117,7 +117,7 @@ return-status-codes = False
 pre-commit-hook = True
 directory =
         ${buildout:directory}/src/Products.PloneMeeting/src
-flake8-ignore = E123,E124,E501,E126,E127,E128,W391,C901
+flake8-ignore = E123,E124,E501,E126,E127,E128,W391,C901,W504
 flake8-extensions =
     flake8-isort
 
