Fix buildout structure for LLO

--- a/lalouviere-dev.cfg
+++ b/lalouviere-dev.cfg
@@ -2,13 +2,19 @@
 
 extends =
     communes-dev.cfg
-    lalouviere.cfg
 
 auto-checkout +=
     Products.MeetingLalouviere
 
 parts +=
     testlalouviere
+
+[instance1]
+eggs +=
+    Products.MeetingLalouviere
+
+zcml +=
+    Products.MeetingLalouviere
 
 [sources]
 Products.MeetingLalouviere = git ${remotes:imio}/Products.MeetingLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingLalouviere.git branch=master
