--- a/docker/Dockerfile-latest
+++ b/docker/Dockerfile-latest
@@ -65,9 +65,10 @@ RUN apt-get update \
   && echo "    amqp.cfg" >> buildout.cfg \
   && echo "    ldap.cfg" >> buildout.cfg \
   && echo "    docker.cfg" >> buildout.cfg \
-  && su -c "virtualenv -p python2 ." -s /bin/sh imio \
-  && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/sh imio \
-  && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
+  && su -c "virtualenv -p python2 ." -s /bin/bash imio \
+  && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/bash imio \
+  && su -c "bin/buildout -t 30 -N" -s /bin/bash imio \
+  && su -c "curl -fso bin/run_script.py https://raw.githubusercontent.com/IMIO/imio.updates/master/src/imio/updates/run_script.py" -s /bin/bash imio \
   && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/ parts/instance? bin/instance?
 
 FROM imiobe/iadelib:base
