--- a/docker/Dockerfile-latest
+++ b/docker/Dockerfile-latest
@@ -4,7 +4,7 @@ ARG PROFILE="communes.cfg"
 
 WORKDIR /plone
 USER root
-COPY --chown=imio *.cfg *.conf requirements.txt Makefile /plone/
+COPY --chown=imio *.cfg *.conf requirements.txt Makefile docker/docker-initialize.py docker/*.sh /plone/
 RUN apt-get update \
   && apt-get full-upgrade -qqy \
   && apt-get install -qqy --no-install-recommends \
@@ -68,8 +68,10 @@ RUN apt-get update \
   && su -c "virtualenv -p python2 ." -s /bin/bash imio \
   && su -c "bin/pip install 'python-ldap==2.4.15' -r requirements.txt" -s /bin/bash imio \
   && su -c "bin/buildout -t 30 -N" -s /bin/bash imio \
-  && su -c "curl -fso bin/run_script.py https://raw.githubusercontent.com/IMIO/imio.updates/master/src/imio/updates/run_script.py" -s /bin/bash imio \
-  && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/ parts/instance? bin/instance?
+  && rm -rf develop-eggs/ src/ var/blobstorage/ var/filestorage/ parts/instance? bin/instance? \
+  && su -c "/plone/get_run_scripts.sh" -s /bin/bash imio \
+  && rm /plone/get_run_scripts.sh
+
 
 FROM imiobe/iadelib:base
 ENV DELIB_MAJOR=4.2
@@ -82,7 +84,7 @@ LABEL delib=$DELIB_VERSION \
 COPY --from=builder /usr/local/lib/python2.7/dist-packages /usr/local/lib/python2.7/dist-packages
 
 COPY --chown=imio --from=builder /plone /plone/
-COPY --chown=imio docker/docker-initialize.py docker/*.sh /plone/
+#COPY --chown=imio docker/docker-initialize.py docker/*.sh /plone/
 WORKDIR /plone
 USER imio
 
