Do no use sources for appy, imio.dashboard, imio.helpers, imio.prettylink, code evolved too much

--- a/dev.cfg
+++ b/dev.cfg
@@ -14,14 +14,14 @@ parts +=
     code-analysis
 
 auto-checkout =
-    appy
+#    appy
     imio.actionspanel
 #    imio.annex
-    imio.dashboard
-    imio.helpers
+#    imio.dashboard
+#    imio.helpers
     imio.history
     imio.migrator
-    imio.prettylink
+#    imio.prettylink
 #    imio.restapi
     collective.behavior.talcondition
 #    collective.ckeditor
