Try to fix POD templates related tests by using appy sources on github

--- a/sources.cfg
+++ b/sources.cfg
@@ -12,7 +12,8 @@ zopefoundation_push = git@github.com:zopefoundation
 zopesvn = svn://svn.zope.org/repos/main/
 
 [sources]
-appy = svn https://svn.forge.pallavi.be/appy-dev/dev0
+#appy = svn https://svn.forge.pallavi.be/appy-dev/dev0
+appy = git ${remotes:imio}/appy.git pushurl=${remotes:imio_push}/appy.git
 collective.behavior.talcondition = git ${remotes:collective}/collective.behavior.talcondition.git pushurl=${remotes:collective_push}/collective.behavior.talcondition.git
 collective.ckeditor = git ${remotes:collective}/collective.ckeditor.git pushurl=${remotes:collective_push}/collective.ckeditor.git
 collective.compoundcriterion = git ${remotes:collective}/collective.compoundcriterion.git pushurl=${remotes:collective_push}/collective.compoundcriterion.git
