--- a/seraing-dev.cfg
+++ b/seraing-dev.cfg
@@ -4,8 +4,8 @@ extends =
     dev.cfg
 
 auto-checkout +=
-    Products.MeetingCommunes
     Products.MeetingSeraing
+    Products.MeetingCommunes
 
 parts +=
     testseraing
@@ -20,7 +20,8 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=master
+Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=4.2.x
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 
 [testseraing]
 recipe = zc.recipe.testrunner
@@ -29,3 +30,4 @@ eggs =
     ${test:eggs}
     Products.MeetingSeraing [test]
 environment = testenv
+
