--- a/charleroi-dev.cfg
+++ b/charleroi-dev.cfg
@@ -20,7 +20,7 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingCharleroi = git ${remotes:imio}/Products.MeetingCharleroi.git pushurl=${remotes:imio_push}/Products.MeetingCharleroi.git branch=master
+Products.MeetingCharleroi = git ${remotes:imio}/Products.MeetingCharleroi.git pushurl=${remotes:imio_push}/Products.MeetingCharleroi.git branch=4.2.x
 
 [testcharleroi]
 recipe = zc.recipe.testrunner
@@ -29,3 +29,4 @@ eggs =
     ${test:eggs}
     Products.MeetingCharleroi [test]
 environment = testenv
+
