--- a/namur-dev.cfg
+++ b/namur-dev.cfg
@@ -20,7 +20,7 @@ zcml +=
     imio.pm.locales
 
 [sources]
-Products.MeetingNamur = git ${remotes:imio}/Products.MeetingNamur.git pushurl=${remotes:imio_push}/Products.MeetingNamur.git branch=master
+Products.MeetingNamur = git ${remotes:imio}/Products.MeetingNamur.git pushurl=${remotes:imio_push}/Products.MeetingNamur.git branch=4.2.x
 
 [testnamur]
 recipe = zc.recipe.testrunner
