use custom plonemeeting.restapi for liege dev

--- a/liege-dev.cfg
+++ b/liege-dev.cfg
@@ -18,6 +18,8 @@ zcml +=
 
 [sources]
 Products.MeetingLiege = git ${remotes:imio}/Products.MeetingLiege.git pushurl=${remotes:imio_push}/Products.MeetingLiege.git branch=master
+plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=meeting_date_by_default
+
 
 [testliege]
 recipe = zc.recipe.testrunner
