--- a/base.cfg
+++ b/base.cfg
@@ -66,7 +66,7 @@ solr-eggs =
 environment-vars =
     # collective.big.bang related vars
     ACTIVE_BIGBANG True
-    PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:zcity
+    PLONE_EXTENSION_IDS plonetheme.classic:default, plonetheme.sunburst:default, Products.MeetingCommunes:default
     DEFAULT_LANGUAGE fr
     SITE_ID ${port:plone-path}
     ADMIN_PASSWORD ${port:admin-password}
