Set http-header-max-length = 16384 (instead 8192 by default) to handle long URL (in dashboards when user is in several groups)

--- a/base.cfg
+++ b/base.cfg
@@ -83,6 +83,7 @@ zeo-client = true
 zeo-address = ${zeoserver:zeo-address}
 zodb-cache-size = ${port:zodb-cache-size}
 zeo-client-cache-size = ${port:zeo-client-cache-size}
+http-header-max-length = 16384
 
 shared-blob = on
 zope-conf-additional =
